# timew-addons

./: .buildinfo  .flake8  .gitchangelog.rc  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .repolite.yml  CHANGELOG.html  CHANGELOG.rst  README.html  README.rst  genindex.html  images  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements-sync.txt  requirements.txt  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: check.yml  ci.yml  debs.yml  pylint.yml  release.yml  sphinx.yml
_modules/: index.html
_modules/timew_addons/: utils.html
_modules/timew_status/: utils.html
_sources/: CHANGELOG.rst.txt  README.rst.txt
_sources/api/: modules.rst.txt  timew_addons.rst.txt  timew_addons.utils.rst.txt  timew_status.rst.txt  timew_status.utils.rst.txt
_static/: docs-versions.js  documentation_options.js  sphinx-nefertiti-default.min.css  sphinx-nefertiti-default.min.css.map  sphinx-nefertiti-green.min.css  sphinx-nefertiti-green.min.css.map  sphinx-nefertiti-indigo.min.css  sphinx-nefertiti-indigo.min.css.map  sphinx-nefertiti-orange.min.css  sphinx-nefertiti-orange.min.css.map  sphinx-nefertiti-pink.min.css  sphinx-nefertiti-pink.min.css.map  sphinx-nefertiti-purple.min.css  sphinx-nefertiti-purple.min.css.map  sphinx-nefertiti-red.min.css  sphinx-nefertiti-red.min.css.map  sphinx-nefertiti-teal.min.css  sphinx-nefertiti-teal.min.css.map  sphinx-nefertiti-yellow.min.css  sphinx-nefertiti-yellow.min.css.map
api/: modules.html  timew_addons.html  timew_addons.utils.html  timew_status.html  timew_status.utils.html
data/: timew-status-indicator.desktop
docs/source/: conf.py  index.rst  modules.rst  pdf.yaml  timew_status.rst
extensions/: csv_rpt.py  onelineday.py  totals.py
scripts/: timew-status-indicator  timew-status-indicator.py
src/indicator_timew/: main.py
src/timew_addons/: __init__.py  utils.py
src/timew_status/: __init__.py  utils.py
src/timew_status/data/: config.yaml
tests/: conftest.py  test_utils.py
