[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "timew_addons"
description = "A collection of timewarrior extensions and experiments"
dynamic = ["version"]
readme = "README.rst"

# legacy bits and new both fail in different versions
# need workaround until PEP639 has more backend support
license = "GPL-3.0-or-later"
# license = {text = "GPL-3.0-or-later"}

authors = [
    {name = "Stephen Arnold"},
    {email = "stephen.arnold42@gmail.com"},
]

keywords = ["appindicator", "extensions", "timewarrior", "timew-report", "timew", "gnome"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Environment :: X11 Applications :: Gnome",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    'PyGObject<=v3.50.0; python_version < "3.13"',
    'PyGObject>=v3.52.1; python_version > "3.12"',
    "munch[yaml]",
    "pycairo",
    "timew-report",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "bandit",
    "flake8",
    "isort",
    "mypy >= 0.990",
    "black >= 22.3.0",
    "pylint >= 3.1.0",
]
cov = [
    "coverage[toml]",
    "coverage_python_version",
]
doc = [
    "semaver",
    "sphinx",
    "sphinx_git",
    "sphinxcontrib-apidoc",
    "myst-parser",
    "sphinx-nefertiti",
    "sphinxcontrib.mermaid",
    "sphinx_rtd_theme<3.0.0",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/sarnold/timew-addons"
Repository = "https://github.com/sarnold/timew-addons.git"
Issues = "https://github.com/sarnold/timew-addons/issues"
Changelog = "https://github.com/sarnold/timew-addons/blob/master/CHANGELOG.rst"

[tool.setuptools.data-files]
"share/applications" = [
    "data/timew-status-indicator.desktop",
]
"share/icons/hicolor/48x48/apps" = [
    "icons/hicolor/48x48/timew.png",
]
"share/icons/hicolor/scalable/apps" = [
    "icons/hicolor/scalable/timew.svg",
]
"share/icons/hicolor/scalable/status" = [
    "icons/hicolor/status/timew_info.svg",
    "icons/hicolor/status/timew_error.svg",
    "icons/hicolor/status/timew_warning.svg",
    "icons/hicolor/status/timew_inactive.svg",
]
"share/timew-addons/extensions" = [
    "extensions/onelineday.py",
    "extensions/totals.py",
    "extensions/csv_rpt.py",
]

[tool.setuptools]
package-dir = {"" = "src"}

script-files = [
    "scripts/timew-status-indicator",
]

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]
log_cli =  false
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
addopts = "--strict-markers"
markers = "subscript"
filterwarnings = [
    "ignore:currentThread:DeprecationWarning",
    "ignore:co_lnotab:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "tests",
    ".tox",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 90
skip-string-normalization = true
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | docs
  | dist
  | tests
)/
'''

[tool.pycln]
all = true

[tool.isort]
line_length = 72
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["docs"]
skips = ["B603", "B404"]
