[metadata]
name = timew-addons
version = attr: setuptools_scm.get_version
description = A collection of timewarrior exentions and experiments
url = https://github.com/sarnold/timewarrior-addons
author = Stephen L Arnold
email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/rst; charset=UTF-8
license_expression = GPL-3.0-or-later
license_files = ["LICEN[CS]E*",]
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Testing
    Topic :: Utilities

keywords =
    timew

[options]
python_requires = >= 3.6

setup_requires =
    setuptools_scm[toml]

install_requires =
    importlib-metadata; python_version < '3.8'
    platformdirs
    requests
    timew-report

packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    sphinx_git
    recommonmark
    sphinx_rtd_theme

test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
gui =
    pycairo
    PyGObject
all =
    %(cov)s
    %(doc)s
    %(gui)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 99
max-complexity = 10
addons = file,open,basestring,xrange,unicode,long,cmp
ignore =
    # too many leading '#' for block comment
    E266,
    # do not assign a lambda expression, use a def
    E731,
    # whitespace before ':'
    E203,
    # multiple spaces before operator
    E221,
    # line break before binary operator
    W503,
    # imported but unused
    F401,
    # module level import not at top of file
    E402,
