[metadata]
name = timew-addons
version = attr: setuptools_scm.get_version
description = A collection of timewarrior extensions and experiments
url = https://github.com/sarnold/timew-addons
author = Stephen L Arnold
author_email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPLv3+
license_expression = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Environment :: Console
    Environment :: X11 Applications :: GTK
    Environment :: X11 Applications :: Gnome
    Topic :: Software Development
    Topic :: Utilities

keywords =
    appindicator
    extensions
    timewarrior
    timew-report
    timew

[options]
python_requires = >= 3.8

setup_requires =
    setuptools_scm[toml]

install_requires =
    munch[yaml]
    timew-report
    pycairo
    PyGObject<=v3.50.0; python_version < "3.13"
    PyGObject>=v3.52.1; python_version > "3.12"

packages = find_namespace:
package_dir =
    =src

scripts =
    scripts/timew-status-indicator

[options.packages.find]
where = src

[options.data_files]
# this is no longer supported as a valid use case, but still works
share/applications =
    data/timew-status-indicator.desktop
share/icons/hicolor/48x48/apps =
    icons/hicolor/48x48/timew.png
share/icons/hicolor/scalable/apps =
    icons/hicolor/scalable/timew.svg
share/icons/hicolor/scalable/status =
    icons/hicolor/status/timew_info.svg
    icons/hicolor/status/timew_error.svg
    icons/hicolor/status/timew_warning.svg
    icons/hicolor/status/timew_inactive.svg
share/timew-addons/extensions =
    extensions/onelineday.py
    extensions/totals.py
    extensions/csv_rpt.py

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    semaver
    sphinx
    sphinx_git
    sphinx_rtd_theme<3.0.0
    sphinxcontrib-apidoc
    myst-parser
    sphinx-nefertiti
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 100
max-complexity = 10
addons = file,open,basestring,xrange,unicode,long,cmp
ignore =
    # too many leading '#' for block comment
    E266,
    # do not assign a lambda expression, use a def
    E731,
    # whitespace before ':'
    E203,
    # multiple spaces before operator
    E221,
    # line break before binary operator
    W503,
    # imported but unused
    F401,
    # module level import not at top of file
    E402,
